--- a/lib/lang/messages.en.json
+++ b/lib/lang/messages.en.json
@@ -7,14 +7,17 @@
     "countRetiredSites": "%j retired sites:",
     "buildingSiteStart": "now building site assets for %j",
     "propertyUpdated": "the %j property has been updated",
-    "cdnPurge": "purging following files on CDN:\n %j",
+    "cdnPurgeStart": "purging following files on CDN:\n \n %j\n",
+    "cdnPurgeEnd": "CDN purge complete\n",
     "siteCreated": "%j has been created",
     "siteRetired": " has been retired",
-    "ftpFinished": "FTP session finished"
+    "ftpFinished": "FTP session finished",
+    "ftpStarted": "FTP session started on %j"
   },
 
   "error": {
     "genericError": "%j",
+    "ftpError": "could not connect to %j \nare you on the network?",
     "argumentsMissing": "arguments for %j missing",
     "notValidProperty": "%j is not a valid property",
     "needSitename": "please enter a name for the new microsite",
