added spanich translations

--- a/lib/lang/messages.en.json
+++ b/lib/lang/messages.en.json
@@ -21,9 +21,9 @@
     "argumentsMissing": "arguments for %j missing",
     "notValidProperty": "%j is not a valid property",
     "needSitename": "please enter a name for the new microsite",
-    "dirNotBuilt": "the %j directory hasn't been built",
+    "dirNotBuilt": "the %j directory hasn't been created",
     "dirAlreadyExists": "that directory already exists, choose another",
-    "siteAlreadyExists": "a microsite by that name already exists, please try again with a different name",
+    "siteAlreadyExists": "a microsite by that name already exists, try another name",
     "siteDoesNotExist": "there is no record of a microsite named %j",
     "noEnvSpecified": "which environment do you want to release to? please use the -e flag to specify an environment",
     "incorrectEnvSpecified": "environment must be eng, qa or prod",
