--- a/lib/lang/messages.es.json
+++ b/lib/lang/messages.es.json
@@ -1,15 +1,43 @@
 {
 
-  "error": {
+  "info": {
+    "genericMessage": "%j",
+    "countTotalSites": "%j sitio en total: ",
+    "countActiveSites": "%j sitio activado: ",
+    "countRetiredSites": "%j sitio retirado: ",
+    "buildingSiteStart": "está construyendo partes del sitio %j ya",
+    "propertyUpdated": "la propiedad de %j ha estado actualizado",
+    "cdnPurgeStart": "está purgando estos archivos en el CDN:\n \n %j\n",
+    "cdnPurgeEnd": "los archivos en el CDN han estado purgado \n",
+    "siteCreated": "%j ha estado creado",
+    "siteRetired": " ha estado retirado",
+    "ftpFinished": "terminó la sesión de FTP",
+    "ftpStarted": "la sesión de FTP comenzó en %j"
   },
 
-  "info": {
+  "error": {
+    "genericError": "%j",
+    "ftpError": "no podía conectar a %j \n¿estás conectado al red?",
+    "argumentsMissing": "los argumentos por %j están perdidos",
+    "notValidProperty": "%j no es una propiedad válida",
+    "needSitename": "entra el nombre del sitio",
+    "dirNotBuilt": "el directorio de %j no ha estado creado",
+    "dirAlreadyExists": "el directorio ya existe, escoje otro",
+    "siteAlreadyExists": "un sitio con este nombre ya existe, intenta otro nombre",
+    "siteDoesNotExist": "no hay un registro de un sitio con el nombre de %j",
+    "noEnvSpecified": "¿en cuál entorno quieres liberar? para especificar el entorno usa la marca '-e'",
+    "incorrectEnvSpecified": "entorno tiene que ser eng, qa o prod",
+    "cdnPurgeNoUrls": "no hay archivos creado por %j",
+    "siteAlreadyRetired": "%j ya ha estado retirado",
+    "noTypeSites": "no hay sitios de %j"
   },
 
   "warn": {
+    "dumb": "¡no hagas esto!"
   },
 
   "ask": {
+    "why": "¿por qué quieres hacer esto?"
   }
 
 }
