--- a/lib/lang/messages.es.json
+++ b/lib/lang/messages.es.json
@@ -2,10 +2,10 @@
 
   "info": {
     "genericMessage": "%j",
-    "countTotalSites": "%j sitio en total: ",
-    "countActiveSites": "%j sitio activado: ",
-    "countRetiredSites": "%j sitio retirado: ",
-    "buildingSiteStart": "está construyendo partes del sitio %j ya",
+    "countTotalSites": "%j sitios web en total: ",
+    "countActiveSites": "%j sitios web activado: ",
+    "countRetiredSites": "%j sitios web retirado: ",
+    "buildingSiteStart": "está construyendo partes del sitios web %j ya",
     "propertyUpdated": "la propiedad de %j ha estado actualizado",
     "cdnPurgeStart": "está purgando estos archivos en el CDN:\n \n %j\n",
     "cdnPurgeEnd": "los archivos en el CDN han estado purgado \n",
@@ -20,11 +20,11 @@
     "ftpError": "no podía conectar a %j \n¿estás conectado al red?",
     "argumentsMissing": "los argumentos por %j están perdidos",
     "notValidProperty": "%j no es una propiedad válida",
-    "needSitename": "entra el nombre del sitio",
+    "needSitename": "entra el nombre del sitios web",
     "dirNotBuilt": "el directorio de %j no ha estado creado",
     "dirAlreadyExists": "el directorio ya existe, escoje otro",
-    "siteAlreadyExists": "un sitio con este nombre ya existe, intenta otro nombre",
-    "siteDoesNotExist": "no hay un registro de un sitio con el nombre de %j",
+    "siteAlreadyExists": "un sitios web con este nombre ya existe, intenta otro nombre",
+    "siteDoesNotExist": "no hay un registro de un sitios web con el nombre de %j",
     "noEnvSpecified": "¿en cuál entorno quieres liberar estos archivos? para especificar el entorno usa la marca '-e'",
     "incorrectEnvSpecified": "entorno tiene que ser eng, qa o prod",
     "cdnPurgeNoUrls": "no hay archivos creado por %j",
