--- a/lib/lang/messages.en.json
+++ b/lib/lang/messages.en.json
@@ -1,40 +1,42 @@
 {
 
   "info": {
-    "genericMessage": "%j",
-    "countTotalSites": "%j sites in total:",
-    "countActiveSites": "%j active sites:",
-    "countRetiredSites": "%j retired sites:",
-    "buildingSiteStart": "now building site assets for %j",
-    "propertyUpdated": "the %j property has been updated",
+    "genericMessage": "%s",
+    "countTotalSites": "%d sites in total:",
+    "countActiveSites": "%d active sites:",
+    "countRetiredSites": "%d retired sites:",
+    "buildingSiteStart": "now building site assets for %s",
+    "propertyUpdated": "the %s property has been updated",
     "cdnPurgeStart": "purging the following files on CDN:\n",
     "cdnPurgeEnd": "CDN purge complete\n",
-    "siteCreated": "%j has been created",
+    "siteCreated": "%s has been created",
     "siteRetired": " has been retired",
     "ftpFinished": "FTP session finished",
-    "ftpStarted": "FTP session started on %j",
-    "emailSending": "emailing release notes...",
-    "emailSuccess": "email sent successfully:"
+    "ftpStarted": "FTP session started on %s",
+    "emailSending": "emailing %s notification",
+    "emailSuccess": "email sent successfully:",
+    "creatingBuildDirectory": "creating build directory..."
   },
 
   "error": {
-    "genericError": "%j",
-    "ftpError": "could not connect to %j \nare you on the network?",
-    "argumentsMissing": "arguments for %j missing",
-    "notValidProperty": "%j is not a valid property",
+    "genericError": "%s",
+    "ftpError": "could not connect to %s \nare you on the network?",
+    "argumentsMissing": "arguments for %s missing",
+    "notValidProperty": "%s is not a valid property",
     "needSitename": "please enter a name for the new microsite",
-    "dirNotBuilt": "the %j directory hasn't been created, use 'sumn build'",
+    "dirNotBuilt": "the %s build directory hasn't been created, use 'sumn build'",
     "dirAlreadyExists": "that directory already exists, choose another",
     "siteAlreadyExists": "a microsite by that name already exists, try another name",
-    "siteDoesNotExist": "there is no record of a microsite named %j",
+    "siteDoesNotExist": "there is no record of a microsite named %s",
     "noEnvSpecified": "which environment do you want to release to? please use the -e flag to specify an environment",
     "invalidEnvSpecified": "environment must be eng, qa or prod",
-    "cdnPurgeNoUrls": "there are no files built for %j",
-    "siteAlreadyRetired": "%j has already been retired",
-    "noTypeSites": "there are no %j sites",
-    "emailFail": "something went wrong so the email was not sent\n%j",
-    "noReleaseNotes": "please include 'release notes' via the -m flag",
-    "invalidAssetTypeSpecified": "%j invalid asset types\nassets must be either 'javascript', 'css' and/or 'images' separated by commas"
+    "cdnPurgeNoUrls": "there are no files built for %s",
+    "siteAlreadyRetired": "%s has already been retired",
+    "noTypeSites": "there are no %s sites",
+    "emailFail": "something went wrong so the email was not sent\n%s",
+    "noReleaseNotes": "please include release notes via the -m flag",
+    "invalidAssetTypeSpecified": "%s invalid asset types\nassets must be either 'javascript', 'css' and/or 'images' separated by commas",
+    "missingSiteName": "please include the name of the site you want to %s"
   },
 
   "warn": {
